[gd_scene load_steps=6 format=3 uid="uid://byasnh108x500"]

[ext_resource type="Theme" uid="uid://dq5if3hoxffim" path="res://Scenes/theme.tres" id="1_454ol"]
[ext_resource type="Script" uid="uid://dhicr7ux52ykn" path="res://Scripts/computer_screen.gd" id="2_bsqmi"]

[sub_resource type="LabelSettings" id="LabelSettings_wjcj6"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_uoaol"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_bsqmi"]
font_size = 32
font_color = Color(0.350563, 0.658447, 0.932094, 1)
shadow_size = 10
shadow_color = Color(0.973535, 0.973535, 0.973535, 0)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_454ol")
script = ExtResource("2_bsqmi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_454ol")

[node name="Exit" type="Button" parent="."]
z_index = 3
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
action_mode = 0
text = "X"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 52.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 1

[node name="General" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="player_credits" type="Label" parent="TabContainer/General"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -12.0
offset_right = 40.0
offset_bottom = 12.0
grow_vertical = 2
text = "CR:"
label_settings = SubResource("LabelSettings_wjcj6")

[node name="crates_on_ships" type="Label" parent="TabContainer/General"]
layout_mode = 0
offset_left = 5.0
offset_top = 340.0
offset_right = 228.0
offset_bottom = 377.0
text = "Crates on Ship: "
label_settings = SubResource("LabelSettings_uoaol")

[node name="Map_Selection" type="Control" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="Label" type="Label" parent="TabContainer/Map_Selection"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 479.0
offset_top = -48.5
offset_right = 752.0
offset_bottom = -11.5
grow_vertical = 2
text = "Select Destination: "
label_settings = SubResource("LabelSettings_bsqmi")

[node name="map_button_container" type="VBoxContainer" parent="TabContainer/Map_Selection"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -86.5
offset_right = 30.0
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Map1" type="Button" parent="TabContainer/Map_Selection/map_button_container"]
layout_mode = 2
text = "Map 1"

[node name="Map2" type="Button" parent="TabContainer/Map_Selection/map_button_container"]
layout_mode = 2
text = "Map 2"

[node name="Shop" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2
